--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ S3method(as_terminators,default)
 S3method(as_terminators,list)
 S3method(bb_optimize,"function")
 S3method(bb_optimize,Objective)
+S3method(tiny_logging,OptimInstanceAsync)
+S3method(tiny_logging,TuningInstanceAsync)
 export(Archive)
 export(ArchiveAsync)
 export(ArchiveAsyncFrozen)
@@ -95,6 +97,7 @@ export(optimize_batch_default)
 export(opts)
 export(shrink_ps)
 export(terminated_error)
+export(tiny_logging)
 export(trafo_xs)
 export(transform_xdt_to_xss)
 export(trm)
