--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(as_terminators,list)
 S3method(bb_optimize,"function")
 S3method(bb_optimize,Objective)
 S3method(tiny_logging,OptimInstanceAsync)
+S3method(tiny_result,OptimInstanceAsync)
 export(Archive)
 export(ArchiveAsync)
 export(ArchiveAsyncFrozen)
@@ -97,6 +98,7 @@ export(opts)
 export(shrink_ps)
 export(terminated_error)
 export(tiny_logging)
+export(tiny_result)
 export(trafo_xs)
 export(transform_xdt_to_xss)
 export(trm)
