--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,6 +47,8 @@ Suggests:
     RhpcBLASctl,
     rush (>= 0.3.1),
     testthat (>= 3.0.0)
+Remotes:
+    mlr-org/rush
 Config/testthat/edition: 3
 Config/testthat/parallel: false
 Encoding: UTF-8
