--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(CallbackBatch)
 export(Codomain)
 export(ContextAsync)
 export(ContextBatch)
+export(EvalInstance)
 export(Objective)
 export(ObjectiveRFun)
 export(ObjectiveRFunDt)
@@ -82,6 +83,7 @@ export(branin)
 export(branin_wu)
 export(callback_async)
 export(callback_batch)
+export(choose_search_space)
 export(clbk)
 export(clbks)
 export(is_dominated)
