--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(OptimizerBatchIrace)
 export(OptimizerBatchLocalSearch)
 export(OptimizerBatchNLoptr)
 export(OptimizerBatchRandomSearch)
+export(OptimizerBatchSmac3)
 export(Terminator)
 export(TerminatorClockTime)
 export(TerminatorCombo)
