--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -21,6 +21,16 @@ name: r-cmd-check
 jobs:
   r-cmd-check:
     runs-on: ${{ matrix.config.os }}
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
@@ -42,10 +52,6 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
-
-      - uses: supercharge/redis-github-action@1.8.1
-        with:
-          redis-version: 7
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
