--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,7 @@ Imports:
     data.table,
     lgr,
     methods,
-    mlr3misc (>= 0.15.1),
+    mlr3misc (>= 0.20.0),
     R6
 Suggests:
     adagio,
@@ -47,6 +47,8 @@ Suggests:
     RhpcBLASctl,
     rush (>= 0.4.1),
     testthat (>= 3.0.0)
+Remotes:
+    mlr-org/mlr3misc
 Config/testthat/edition: 3
 Config/testthat/parallel: false
 Encoding: UTF-8
@@ -112,6 +114,7 @@ Collate:
     'bb_optimize.R'
     'bbotk_reflections.R'
     'bibentries.R'
+    'conditions.R'
     'helper.R'
     'local_search.R'
     'mlr_callbacks.R'
